# bathytools

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
examples/: north_adriatic.yaml
mer_domains/: GSN.yaml  got.yaml  gsn.yaml  ion.yaml  lig.yaml  nad.yaml  sad.yaml  sar.yaml  sic.yaml  tyr.yaml
mer_domains/high_reso/: cag.yaml  con.yaml  fol.yaml  gae.yaml  gor.yaml  hgt.yaml  iso.yaml  lam.yaml  nap.yaml  pan.yaml  pes.yaml
mer_domains/rivers/: CAG.json  GAE.json  GOR.json  GOT.json  GSN.json  HGT.json  ION.json  ISO.json  LAM.json  LIG.json  NAD.json  PES.json  SAD.json  SAR.json  SIC.json  TYR.json  main.json
polygons/: nad_lagoons.csv  sad_eastCorfu.csv
src/bathytools/: __main__.py  bathy.py  bathymetry_config.py  depth_levels.py  dig.py  domain_discretization.py  geoarrays.py  graph_help.py  mesh_config.py  operations.py  output_appendix.py  water_fractions.py
src/bathytools/actions/: __init__.py  cap_depth.py  dig_channel.py  dig_rivers.py  fix_depth.py  remove_deep_trapped_water.py  remove_detached_cells.py  remove_shallow.py  remove_trapped_water.py  set_depth.py  write_blank_tiles.py
src/bathytools/bathymetry_sources/: __init__.py  emodnet.py
src/bathytools/filters/: __init__.py  remove_stagnations.py
src/bathytools/utilities/: dig.py  generate_tmask.py  logtools.py  plotting_helpers.py  points.py  relative_paths.py
tests/: test_dig.py  test_integrate_bathymetry.py
tools/: restyle_json.py  river_json_writer.py
